--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-forms",
-  "version": "1.0.0",
+  "name": "react-tera-forms",
+  "version": "1.0.1",
   "description": "Forms for React",
   "author": "csalajan",
   "license": "MIT",
